# StructuralHorn

./: CMakeLists.txt  README.md
cmake/: FindZ3.cmake
example/: chc-LIA_000-clauses_addition_order.txt  chc-LIA_003.smt2  chc-LIA_103.smt2  run-chc-LIA_001.txt  run-chc-LIA_002.txt  run-chc-LIA_003.txt  run-chc-LIA_103.txt
example/eldarica_debug/: chc-LIA-Lin_019.smt2  chc-LIA-Lin_093.smt2  chc-LIA-Lin_109.smt2  chc-LIA-Lin_133.smt2
ext/: brunch.py  get_files.cmd  run_files.cmd
src/: CMakeLists.txt  Eldarica.h  EldaricaSolver.h  Global.cpp  Global.h  Hypergraph.h  Solver.h  Spacer.h  Stats.cpp  Stats.h  StructHorn.cpp  StructHorn.h  StructuralHorn.cpp  StructuralHorn.h  Test.h
